small fix for the bottom-overflow class on mobile

--- a/drupal/sites/all/themes/antistatique/assets/sass/layout/helpers.scss
+++ b/drupal/sites/all/themes/antistatique/assets/sass/layout/helpers.scss
@@ -98,7 +98,10 @@
   &:after {
     content: '';
     display: block;
-    height: 300px;
+    height: 200px;
+    @media only screen and (min-width: $screen-sm-min) {
+      height: 300px;
+    }
     width: 100%;
     background: $white;
     margin-top: -180px;
